DocuSign For Salesforce/objects/DocuSign_Recipient_Status__c.object
<CustomObject>
    <description>Information about a Recipient on a DocuSign Envelope. This is a child object of DocuSign Status</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
        <relationshipName>R00N80000002vw3gEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
        <relationshipName>R00NS0000000WUMyMAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Declined__c</fullName>
        <description>The Date that the Recipient declined to sign the envelope</description>
        <label>Date Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <description>The Date that the recipient received (opened) the envelope</description>
        <label>Date Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <description>The Date that this recipient was sent an invitation to the envelope</description>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <description>The Date that the Recipient signed the Envelope</description>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_Reason__c</fullName>
        <description>The reason that the Recipient gave for declining to sign the Envelope</description>
        <label>Decline Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Recipient_Company__c</fullName>
        <label>DocuSign Recipient Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Recipient_Email__c</fullName>
        <description>The email address that the recipient used in the DocuSign System.</description>
        <label>DocuSign Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DocuSign_Recipient_Id__c</fullName>
        <externalId>true</externalId>
        <label>DocuSign Recipient Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Recipient_Title__c</fullName>
        <label>DocuSign Recipient Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Routing_Order__c</fullName>
        <label>DocuSign Routing Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Envelope_Id__c</fullName>
        <description>The DocuSign EnvelopeId that this Recipient is related to</description>
        <label>Envelope Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
        <relationshipName>R00NS0000000WUMzMAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Status_Record__c</fullName>
        <label>DocuSign Status Record</label>
        <referenceTo>DocuSign_Status__c</referenceTo>
        <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
        <relationshipName>R00NS0000000WUO2MAO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipient_Status__c</fullName>
        <description>The last status reported by the DocuSign System for this recipient</description>
        <label>Recipient Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Recipient Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocuSign_Recipient_Email__c</columns>
        <columns>DocuSign_Routing_Order__c</columns>
        <columns>Recipient_Status__c</columns>
        <columns>Parent_Status_Record__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Date_Signed__c</columns>
        <columns>Date_Declined__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DocuSign Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Recipient Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>